2002-12-15  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-connection.h: added SCHEMA_LANGUAGES to GdaConnectionSchema
	enumeration.

2002-12-15  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #101085

	* providers/sybase/gda-sybase-provider.c
	(gda_sybase_provider_get_database): fixed typo.

2002-12-15  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #101084

	* providers/sybase/gda-sybase-provider.c (gda_sybase_execute_cmd):
	don't mark function names for translation.

2002-12-13  Vivien Malerba <malerba@gnome-db.org>
	* libgda/gda-value.c: corrected a localization bug in the gda_value_to_xml () function.
	* providers/postgres/gda-postgres-provider.c: started to implement the
	  changes to handle the Postgres 7.3 "schemas" features.
	* libgda/gda-connection.h: added a new feature enum (GDA_CONNECTION_FEATURE_NAMESPACES)
	  and a new schemas enum (GDA_CONNECTION_SCHEMA_NAMESPACES).
	* doc/C/libgda-docs.sgml: updated the documentation for the
	  "namespaces" (Postgres's 7.3 new schemas feature)

2002-12-13  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #101118

	* configure.in:
	* Makefile.am: removed IDL dir from the build.

2002-12-10  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #97669 (Oracle part)

	* gda-oracle-connection.c (get_oracle_objects): added a 'nargs'
	argument to get the number of fields that are expected to be returned
	in the data model, so that we always return the correct number
	(very temporary fix until we really implement all schemas).
	(gda_oracle_provider_get_schema): use new argument in
	get_oracle_objects().

2002-12-10  Holger Thon <holger.thon@gnome-db.org>

	* providers/freetds/gda-tds-{schemas.h,types.c}:
	* providers/freetds/gda-freetds-provider.[ch]: fixed types schema,
	get_server_version
	* providers/freetds/gda-freetds-recordset.c: fixed datamodel return
	for queries without result
	
	* testing/freetds-test.c: activated freetds provider checks again
	
	* providers/sybase/gda-sybase-provider.c: null-length password fix
